--- a/EngineerNotebook.BlazorAdmin/wwwroot/index.html
+++ b/EngineerNotebook.BlazorAdmin/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>Engineers Notebook</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+    <link href="css/admin.css" rel="stylesheet" />
     <link href="EngineerNotebook.BlazorAdmin.styles.css" rel="stylesheet" />
     <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
